@@ -156,53 +156,31 @@ sudo dpkg --configure -a                         # Make sure that all the packag
 sudo apt-get clean                               # Clean up the old archived packages
 sudo apt-get update --allow-releaseinfo-change   # Update the package list
 
+# --------- Remove any previous hold on VLC -----------------
+
+if apt-mark showhold | grep -q 'vlc'; then
+  sudo apt-mark unhold vlc
+  sudo apt-mark unhold libvlc-bin
+  sudo apt-mark unhold libvlc5
+  sudo apt-mark unhold libvlccore9
+  sudo apt-mark unhold vlc-bin
+  sudo apt-mark unhold vlc-data
+  sudo apt-mark unhold vlc-plugin-base
+  sudo apt-mark unhold vlc-plugin-qt
+  sudo apt-mark unhold vlc-plugin-video-output
+  sudo apt-mark unhold vlc-l10n
+  sudo apt-mark unhold vlc-plugin-notify
+  sudo apt-mark unhold vlc-plugin-samba
+  sudo apt-mark unhold vlc-plugin-skins2
+  sudo apt-mark unhold vlc-plugin-video-splitter
+  sudo apt-mark unhold vlc-plugin-visualization
+fi
+
 DisplayUpdateMsg "Step 4a of 10\nStill Updating Software Packages\n\nXXXX------"
 
 # --------- Update Packages ------
 
 sudo apt-get -y dist-upgrade # Upgrade all the installed packages to their latest version
-
-# --------- Make sure that VLC is the right version ----------
-
-# --------- Make sure that VLC is the right version ----------
-
-if ! dpkg -s vlc | grep -q '^Version: 3.0.12-0+deb10u1+rpt3'; then
-  sudo apt-get --allow-downgrades -y install vlc=3.0.12-0+deb10u1+rpt3 \
-  libvlc-bin=3.0.12-0+deb10u1+rpt3 \
-  libvlc5=3.0.12-0+deb10u1+rpt3 \
-  libvlccore9=3.0.12-0+deb10u1+rpt3 \
-  vlc-bin=3.0.12-0+deb10u1+rpt3 \
-  vlc-data=3.0.12-0+deb10u1+rpt3 \
-  vlc-plugin-base=3.0.12-0+deb10u1+rpt3 \
-  vlc-plugin-qt=3.0.12-0+deb10u1+rpt3 \
-  vlc-plugin-video-output=3.0.12-0+deb10u1+rpt3 \
-  vlc-l10n=3.0.12-0+deb10u1+rpt3 \
-  vlc-plugin-notify=3.0.12-0+deb10u1+rpt3 \
-  vlc-plugin-samba=3.0.12-0+deb10u1+rpt3 \
-  vlc-plugin-skins2=3.0.12-0+deb10u1+rpt3 \
-  vlc-plugin-video-splitter=3.0.12-0+deb10u1+rpt3 \
-  vlc-plugin-visualization=3.0.12-0+deb10u1+rpt3
-fi
-
-# --------- Hold VLC so that it does not get upgraded next time ------
-
-if ! apt-mark showhold | grep -q  'vlc'; then
-  sudo apt-mark hold vlc
-  sudo apt-mark hold libvlc-bin
-  sudo apt-mark hold libvlc5
-  sudo apt-mark hold libvlccore9
-  sudo apt-mark hold vlc-bin
-  sudo apt-mark hold vlc-data
-  sudo apt-mark hold vlc-plugin-base
-  sudo apt-mark hold vlc-plugin-qt
-  sudo apt-mark hold vlc-plugin-video-output
-  sudo apt-mark hold vlc-l10n
-  sudo apt-mark hold vlc-plugin-notify
-  sudo apt-mark hold vlc-plugin-samba
-  sudo apt-mark hold vlc-plugin-skins2
-  sudo apt-mark hold vlc-plugin-video-splitter
-  sudo apt-mark hold vlc-plugin-visualization
-fi
 
 # --------- Install new packages as Required ---------
 
